# transcriptor

./: .gitignore  README.md  pyproject.toml  start.sh  transcribe.py
