[project]
name = "transcriptor"
version = "0.1.0"
description = "Transcribe iPhone Voice Memos locally: Whisper STT -> LLM cleanup -> LLM summary."
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.0.3",
    "ollama>=0.5.0",
    "tqdm>=4.66",
]

[project.scripts]
transcribe = "transcribe:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["transcribe.py"]
